web.xml 에서 doing을 action으로 수정

--- a/Household_Ledger/WebContent/WEB-INF/web.xml
+++ b/Household_Ledger/WebContent/WEB-INF/web.xml
@@ -12,6 +12,6 @@
   
   <context-param>
     <param-name>fileName</param-name>
-    <param-value>com.house.util.doing</param-value>
+    <param-value>com.house.util.action</param-value>
   </context-param>
 </web-app>
