Household select 추가중

--- a/Household_Ledger/src/com/house/model/dao/dbQuery.properties
+++ b/Household_Ledger/src/com/house/model/dao/dbQuery.properties
@@ -1,1 +1,7 @@
 #key=query
+query.select=select * from Household where user_id=?
+query.selectType=select * from Household where user_id=? and own_type=?
+query.selectKind=select * from Household where user_id=? and own_kind=?
+query.selectRec=select * from Household where user_id=? and record=?
+query.selectTNR=select * from Household where user_id=? and own_type=? and record=?
+query.selectKNR=select * from Household where user_id=? and own_kind=? and record=?
