--- a/Household_Ledger/src/com/house/model/dao/dbQuery.properties
+++ b/Household_Ledger/src/com/house/model/dao/dbQuery.properties
@@ -1,7 +1,19 @@
 #key=query
-query.select=select * from Household where user_id=?
-query.selectType=select * from Household where user_id=? and own_type=?
-query.selectKind=select * from Household where user_id=? and own_kind=?
-query.selectRec=select * from Household where user_id=? and record=?
-query.selectTNR=select * from Household where user_id=? and own_type=? and record=?
-query.selectKNR=select * from Household where user_id=? and own_kind=? and record=?
+query.select=select * from Household where user_id=? order by use_time desc
+query.selectType=select * from Household where user_id=? and own_type=? order by use_time desc
+query.selectKind=select * from Household where user_id=? and own_kind=? order by use_time desc
+query.selectRec=select * from Household where user_id=? and rec=? order by use_time desc
+query.selectTNR=select * from Household where user_id=? and own_type=? and rec=? order by use_time desc
+query.selectKNR=select * from Household where user_id=? and own_kind=? and rec=? order by use_time desc
+query.selectRec3=select * from Household where user_id=? and rec=? and rownum<=3 order by use_time desc
+query.selectM=select * from RMoney where user_id=?
+query.insertBoard=insert into Board values(autoup.nextval,?,?,?,0,?,sysdate)
+query.deleteBoard=delete from Board where idx=?
+query.selectBoard=select * from Board
+query.selectBoardByidx=select * from Board where idx=?
+query.updateBoardByReadnum=update Board set viewCount=viewCount+1 where idx=?
+query.updateBoard=update Board set userId=?,title=?,content=? where idx=?
+query.userlogin=select * from Users where user_id=? and user_pwd=?
+query.userinsert=insert into Users values(?,?,?,?,?,?)
+query.userselect=select user_id from Users where user_id=?
+query.userdelete=delete from Users where user_id=?
