--- a/Household_Ledger/src/com/house/util/action.properties
+++ b/Household_Ledger/src/com/house/util/action.properties
@@ -1,3 +1,5 @@
 #key=value
 select=com.house.controller.SelectHouseAction
 selectDetail=com.house.controller.SelectDetailHouseAction
+selectInput=com.house.controller.SelectInputHouseAction
+boardDetail=com.house.controller.DetailViewBoardAction
